--- a/stockmanager/Dockerfile
+++ b/stockmanager/Dockerfile
@@ -1,4 +1,4 @@
 FROM openjdk:8-jre
-ADD target/stockmanager-0.0.1-SNAPSHOT.jar app.jar
+ADD /home/bandaru/kubernetes-yamls/myagent/_work/1/a/stockmanager/target/stockmanager-0.0.1-SNAPSHOT.jar app.jar
 EXPOSE 8030
 ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
