Updating azure-pipeline yaml

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,11 +1,9 @@
-
-
 variables:
 - group: devgrp
 - name: COMMIT
   value: $(Build.SourceVersion)$(Build.BuildNumber)
 - name: SERVICE_NAME
-  value: "facebookservice"
+  value: facebookservice
 - name: pathToCache
   value: $(Pipeline.Workspace)/.m2/repository
 - name: cacheKey
@@ -13,50 +11,46 @@ variables:
 - name: restoreKeys
   value: ' | maven | "$(Agent.OS)" maven '
 - name: PMD_ANALYSIS_SKIP
-  value: FALSE
+  value: false
 - name: JUNIT_TESTS_ANALYSIS_SKIP
-  value: FALSE
+  value: false
 - name: BUILD_QUALITYCHECK
-  value: FALSE  
+  value: false
 - name: SONAR_ANALYSIS
-  value: TRUE
-
+  value: true
 resources:
-   repositories:
-   - repository: self
-     type: git
-     ref: azure-pipelines
-
+  repositories:
+  - repository: self
+    type: git
+    ref: azure-pipelines
 name: $(date:yyyyMMdd)$(rev:.r)
 trigger: none
 pr: none
 pool:
-  vmImage: 'ubuntu-18.04'
-
+  vmImage: windows-2023
 stages:
 - stage: build_and_test
   displayName: Build and test
-  dependsOn:
+  dependsOn: null
   condition: and(not(failed()), in(variables['Build.Reason'], 'IndividualCI', 'Manual'))
   variables:
-    - name: ENV
-      value: dev
-    - name: CONFIG_REPO_PATH
-      value: dev
+  - name: ENV
+    value: dev
+  - name: CONFIG_REPO_PATH
+    value: dev
   jobs:
   - job: build
     displayName: Build
     timeoutInMinutes: 10
     steps:
     - template: ./pipeline/test-build-steps.yaml
-
 - stage: deploy_dev
   displayName: Deploy to Dev
   dependsOn: build_and_test
   condition: and(not(failed()), in(variables['Build.Reason'], 'IndividualCI', 'Manual'))
   variables:
-    - name: ENV
-      value: dev
+  - name: ENV
+    value: dev
   jobs:
   - deployment: deploy
     displayName: Deploy
