Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,7 +31,13 @@ pool:
 steps: 
   - script: echo This runs in the bash shell on self hosted machine 
   - bash: |
-      echo "${HOSTNAME}"   
-      cd shopfront/    
-      mvn clean install    
-      ../home/vinay/bin/buildctl --addr tcp://buildkitd.default.svc.cluster.local:1234 build  --frontend=dockerfile.v0 --local context=. --local dockerfile=.
+      echo "${HOSTNAME}" 
+      pwd  
+      cd shopfront/
+      ls    
+      mvn clean install
+      cd /home/vinay
+      ls
+      cd /home/vinay/bin
+      ls
+      ./buildctl --addr tcp://buildkitd.default.svc.cluster.local:1234 build  --frontend=dockerfile.v0 --local context= --local dockerfile=.
